all project functionality works

--- a/index.html
+++ b/index.html
@@ -277,79 +277,83 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12" id="projectContainer">
-                <div class="projectImgContainer projectTile">
-                  <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectImg" id="frontProject" alt="...">
-                  <div class="projectImgOverlay">
-                    <h5>Earthlight Weather App</h5>
-                    <a href="https://wilsoncollin7.github.io/Earthlight/" class="btn portBtn shadow" target="#">Let's see it!</a>
-                    <a href="https://github.com/wilsoncollin7/Earthlight" class="btn portGitBtn shadow" target="#">GitHub</a>
+                <div class="frontContainer">
+                  <div class="projectImgContainer projectTile" id="frontProject1">
+                    <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Earthlight Weather App</h5>
+                      <a href="https://wilsoncollin7.github.io/Earthlight/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                      <a href="https://github.com/wilsoncollin7/Earthlight" class="btn portGitBtn shadow" target="#">GitHub</a>
+                    </div>
                   </div>
-                </div>
-                <div class="projectImgContainer projectTile">
-                  <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="prjectImg" id="frontProject" alt="...">
-                  <div class="projectImgOverlay">
-                    <h5>Movie Search</h5>
-                    <a href="https://wilsoncollin7.github.io/project1/" class="btn portBtn shadow" target="#">Let's see it!</a>
-                    <a href="https://github.com/wilsoncollin7/project1" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  <div class="projectImgContainer projectTile" id="frontProject2">
+                    <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Movie Search</h5>
+                      <a href="https://wilsoncollin7.github.io/project1/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                      <a href="https://github.com/wilsoncollin7/project1" class="btn portGitBtn shadow" target="#">GitHub</a>
 
+                    </div>
                   </div>
-                </div>
-                <div class="projectImgContainer projectTile">
-                  <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="prjectImg" id="frontProject" alt="...">
-                  <div class="projectImgOverlay">
-                    <h5>Password Generator</h5>
-                    <a href="https://wilsoncollin7.github.io/Password-Generator/" class="btn portBtn shadow" target="#">Let's see it!</a>
-                    <a href="https://github.com/wilsoncollin7/Password-Generator" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  <div class="projectImgContainer projectTile" id="frontProject3">
+                    <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Password Generator</h5>
+                      <a href="https://wilsoncollin7.github.io/Password-Generator/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                      <a href="https://github.com/wilsoncollin7/Password-Generator" class="btn portGitBtn shadow" target="#">GitHub</a>
 
+                    </div>
                   </div>
-                </div>
-                <div class="projectImgContainer projectTile">
-                  <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="prjectImg" id="frontProject" alt="...">
-                  <div class="projectImgOverlay">
-                    <h5>Daily Planner</h5>
-                    <a href="https://wilsoncollin7.github.io/work-day-scheduler/" class="btn portBtn shadow" target="#">Let's see it!</a>
-                    <a href="https://github.com/wilsoncollin7/work-day-scheduler" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  <div class="projectImgContainer projectTile" id="frontProject4">
+                    <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Daily Planner</h5>
+                      <a href="https://wilsoncollin7.github.io/work-day-scheduler/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                      <a href="https://github.com/wilsoncollin7/work-day-scheduler" class="btn portGitBtn shadow" target="#">GitHub</a>
 
+                    </div>
                   </div>
                 </div>
                 <!-- ----------------------------------------------------------------------------------------- -->
-                <div class="projectImgContainer projectTile">
-                  <img src="./assets/dev-photos/website-pics/back/burger.png" class="prjectImg" id="backProject" alt="...">
-                  <div class="projectImgOverlay">
-                    <h5>Eat-Da-Burger</h5>
-                    <a href="https://github.com/wilsoncollin7/eat-da-burger" class="btn portGitBtn shadow" target="#">GitHub</a>
+                <div class="backContainer">
+                  <div class="projectImgContainer projectTile backCont" id="backProject1">
+                    <img src="./assets/dev-photos/website-pics/back/burger.png" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Eat-Da-Burger</h5>
+                      <a href="https://github.com/wilsoncollin7/eat-da-burger" class="btn portGitBtn shadow" target="#">GitHub</a>
 
+                    </div>
                   </div>
-                </div>
-                <div class="projectImgContainer projectTile">
-                  <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="prjectImg" id="backProject" alt="...">
-                  <div class="projectImgOverlay">
-                    <h5>Employee Management System</h5>
-                    <a href="https://github.com/wilsoncollin7/employee-management-system" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  <div class="projectImgContainer projectTile backCont" id="backProject2">
+                    <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Employee Management System</h5>
+                      <a href="https://github.com/wilsoncollin7/employee-management-system" class="btn portGitBtn shadow" target="#">GitHub</a>
 
+                    </div>
                   </div>
-                </div>
-                <div class="projectImgContainer projectTile">
-                  <img src="./assets/dev-photos/website-pics/back/note.JPG" class="prjectImg" id="backProject" alt="...">
-                  <div class="projectImgOverlay">
-                    <h5>Note Taking App</h5>
-                    <a href="https://wilsoncollin7-note.herokuapp.com/" class="btn portBtn shadow" target="#">Let's see it!</a>
-                    <a href="https://github.com/wilsoncollin7/note" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  <div class="projectImgContainer projectTile backCont" id="backProject3">
+                    <img src="./assets/dev-photos/website-pics/back/note.JPG" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Note Taking App</h5>
+                      <a href="https://wilsoncollin7-note.herokuapp.com/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                      <a href="https://github.com/wilsoncollin7/note" class="btn portGitBtn shadow" target="#">GitHub</a>
 
+                    </div>
                   </div>
-                </div>
-                <div class="projectImgContainer projectTile">
-                  <img src="./assets/dev-photos/website-pics/back/team.JPG" class="prjectImg" id="backProject" alt="...">
-                  <div class="projectImgOverlay">
-                    <h5>Team Builder</h5>
-                    <a href="https://github.com/wilsoncollin7/team-builder" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  <div class="projectImgContainer projectTile backCont" id="backProject4">
+                    <img src="./assets/dev-photos/website-pics/back/team.JPG" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Team Builder</h5>
+                      <a href="https://github.com/wilsoncollin7/team-builder" class="btn portGitBtn shadow" target="#">GitHub</a>
+                    </div>
                   </div>
-                </div>
-                <div class="projectImgContainer projectTile">
-                  <img src="./assets/dev-photos/website-pics/back/readme.JPG" class="prjectImg" id="backProject" alt="...">
-                  <div class="projectImgOverlay">
-                    <h5>README.md Generator</h5>
-                    <a href="https://github.com/wilsoncollin7/README-Generator" class="btn portGitBtn shadow" target="#">GitHub</a>
+                  <div class="projectImgContainer projectTile backCont" id="backProject5">
+                    <img src="./assets/dev-photos/website-pics/back/readme.JPG" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>README.md Generator</h5>
+                      <a href="https://github.com/wilsoncollin7/README-Generator" class="btn portGitBtn shadow" target="#">GitHub</a>
+                    </div>
                   </div>
                 </div>
               </div>
