--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="row">
               <div class="col-lg-12" id="projectContainer">
                 <div class="frontContainer">
-                  <div class="projectImgContainer projectTile" id="frontProject1" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                  <div class="projectImgContainer projectTile" id="frontProject1">
                     <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Earthlight Weather App</h5>
@@ -143,7 +143,7 @@
                       <a href="https://github.com/wilsoncollin7/Earthlight" class="btn portGitBtn shadow" target="#">GitHub</a>
                     </div>
                   </div>
-                  <div class="projectImgContainer projectTile" id="frontProject2" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                  <div class="projectImgContainer projectTile" id="frontProject2">
                     <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Movie Search</h5>
@@ -152,7 +152,7 @@
 
                     </div>
                   </div>
-                  <div class="projectImgContainer projectTile" id="frontProject3" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                  <div class="projectImgContainer projectTile" id="frontProject3">
                     <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Password Generator</h5>
@@ -161,7 +161,7 @@
 
                     </div>
                   </div>
-                  <div class="projectImgContainer projectTile" id="frontProject4" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                  <div class="projectImgContainer projectTile" id="frontProject4">
                     <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Daily Planner</h5>
