changed aos ani so that settings are global

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
             <div class="container-fluid">
                 <div class="row">
                 <div class="col-lg-12">
-                    <img src="assets/photos/profile.jpg" alt="profile" id="profile-pic" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                    <img src="assets/photos/profile.jpg" alt="profile" id="profile-pic" data-aos="fade-up">
                 </div>
                 </div>
             </div>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 id="aboutHeader" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">WHO AM I?</h1>
-                        <div class="accordion" id="aboutAccordion" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                        <h1 id="aboutHeader" data-aos="fade-up">WHO AM I?</h1>
+                        <div class="accordion" id="aboutAccordion" data-aos="fade-up">
                             <div class="aboutItem">
                                 <div class="card-body" id="headingOne">
                                 <h2 class="mb-0">
@@ -117,16 +117,16 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12">
-                <h1 id="projectsHeader" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">PROJECTS</h1>
+                <h1 id="projectsHeader" data-aos="fade-up">PROJECTS</h1>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-3"></div>
               <div class="col-lg-3 selectorRow">
-                <button class="btn frontSelector" id="projectSelector" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">FRONT-END</button>
+                <button class="btn frontSelector" id="projectSelector" data-aos="fade-up">FRONT-END</button>
               </div>
               <div class="col-lg-3 selectorRow">
-                <button class="btn backSelector" id="projectSelector" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">BACK-END</button>
+                <button class="btn backSelector" id="projectSelector" data-aos="fade-up">BACK-END</button>
               </div>
               <div class="col-lg-3"></div>
             </div>
@@ -134,7 +134,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12" id="projectContainer">
-                <div class="frontContainer">
+                <div class="frontContainer" data-aos="fade-up">
                   <div class="projectImgContainer projectTile" id="frontProject1">
                     <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
@@ -172,7 +172,7 @@
                   </div>
                 </div>
                 <!-- ----------------------------------------------------------------------------------------- -->
-                <div class="backContainer">
+                <div class="backContainer" data-aos="fade-up">
                   <div class="projectImgContainer projectTile backCont" id="backProject1">
                     <img src="./assets/dev-photos/website-pics/back/burger.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
@@ -222,12 +222,12 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 id="skillsHeader" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">SKILLS</h1>
+                        <h1 id="skillsHeader" data-aos="fade-up">SKILLS</h1>
                     </div>
                 </div>
                 <div class="row" id="skillsRow">
                     <div class="col-lg-3">
-                        <div class="card" id="skillCard1" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                        <div class="card" id="skillCard1" data-aos="fade-up">
                             <div class="card-header" id="skillListHeader">
                                 Languages
                             </div>
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="card" id="skillCard2" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                        <div class="card" id="skillCard2" data-aos="fade-up">
                             <div class="card-header" id="skillListHeader">
                                 Technologies
                             </div>
@@ -288,7 +288,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="card" id="skillCard3" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                        <div class="card" id="skillCard3" data-aos="fade-up">
                             <div class="card-header" id="skillListHeader">
                                 Other
                             </div>
@@ -321,7 +321,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 id="hobbiesHeader" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">HOBBIES</h1>
+                        <h1 id="hobbiesHeader" data-aos="fade-up">HOBBIES</h1>
                     </div>
                 </div>
                 <div class="row rounded shadow" id="hoddiesContainer">
@@ -329,16 +329,16 @@
                         <div class="row">
                             <div class="col-lg-1"></div>
                             <div class="col-lg-5">
-                                <img class="icon" src="./assets/dev-photos/anvil.png" alt="anvil" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
-                                <p id="hobbyText" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">I am an amateur blacksmith with a focus on knives and jewelry! I have been practicing for over 4 years and have created beautiful pieces! I have always loved working with metal and creating amazing works out of nothing. Growing up I didn’t have much, so I had to learn to use what I had; I have trained myself to use mostly hand tools and what ever medium I can get my hands on! If you are interested in seeing my work, please contact me!</p>
-                                <img class="icon" src="./assets/dev-photos/jeep.png" alt="anvil" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
-                                <p id="hobbyText" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">I have always loved the outdoors and being in nature, with this love I have recently broken into the world of overlanding and 4x4 exploration! I have an Orange Jeep Gladiator which I am building up to be the ultimate exploring vehicle! I hope to one day take it out to the west and explore the vast wilderness! I love getting out and finding new places to explore, soon I will be starting a YouTube channel about my exploration in my Gladiator!</p>
+                                <img class="icon" src="./assets/dev-photos/anvil.png" alt="anvil" data-aos="fade-up">
+                                <p id="hobbyText" data-aos="fade-up">I am an amateur blacksmith with a focus on knives and jewelry! I have been practicing for over 4 years and have created beautiful pieces! I have always loved working with metal and creating amazing works out of nothing. Growing up I didn’t have much, so I had to learn to use what I had; I have trained myself to use mostly hand tools and what ever medium I can get my hands on! If you are interested in seeing my work, please contact me!</p>
+                                <img class="icon" src="./assets/dev-photos/jeep.png" alt="anvil" data-aos="fade-up">
+                                <p id="hobbyText" data-aos="fade-up">I have always loved the outdoors and being in nature, with this love I have recently broken into the world of overlanding and 4x4 exploration! I have an Orange Jeep Gladiator which I am building up to be the ultimate exploring vehicle! I hope to one day take it out to the west and explore the vast wilderness! I love getting out and finding new places to explore, soon I will be starting a YouTube channel about my exploration in my Gladiator!</p>
                             </div>
                             <div class="col-lg-5">
-                                <img class="icon" src="./assets/dev-photos/hiking.png" alt="anvil" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
-                                <p id="hobbyText" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">Nothing is more fun to me than getting out and exploring the world. While I was in Europe I fell in love with hiking and exploring the wilderness. In Scotland there were so many mind-blowing places to explore. Everyday I try to get out in nature and have a hike or walk; I believe being in nature as much as possible is key to a healthy body and mind. Soon I will be moving to Seattle, Washington, where I cannot wait to explore the vast wilderness of the Pacific Northwest!</p>
-                                <img class="icon" src="./assets/dev-photos/computer.png" alt="anvil" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
-                                <p id="hobbyText" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">As long as I can remember I have been a hardcore computer gamer. My father taught me at a young age to experiment with game files and mods to make any game perfect for me. From there I have always been draw to modifying games to make them better. I have a deep love for games such as Skyrim, Fallout New Vegas, and Gary’s Mod. I have put THOUSANDS of hours into those games and still to this day I find new things to do and explore! I hope to one day work for a game developer and build amazing worlds I can explore!</p>
+                                <img class="icon" src="./assets/dev-photos/hiking.png" alt="anvil" data-aos="fade-up">
+                                <p id="hobbyText" data-aos="fade-up">Nothing is more fun to me than getting out and exploring the world. While I was in Europe I fell in love with hiking and exploring the wilderness. In Scotland there were so many mind-blowing places to explore. Everyday I try to get out in nature and have a hike or walk; I believe being in nature as much as possible is key to a healthy body and mind. Soon I will be moving to Seattle, Washington, where I cannot wait to explore the vast wilderness of the Pacific Northwest!</p>
+                                <img class="icon" src="./assets/dev-photos/computer.png" alt="anvil" data-aos="fade-up">
+                                <p id="hobbyText" data-aos="fade-up">As long as I can remember I have been a hardcore computer gamer. My father taught me at a young age to experiment with game files and mods to make any game perfect for me. From there I have always been draw to modifying games to make them better. I have a deep love for games such as Skyrim, Fallout New Vegas, and Gary’s Mod. I have put THOUSANDS of hours into those games and still to this day I find new things to do and explore! I hope to one day work for a game developer and build amazing worlds I can explore!</p>
                             </div>
                             <div class="col-lg-1"></div>
                         </div>
@@ -355,7 +355,7 @@
         <div class="container-fluid footer">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="shadow rounded" id="contact" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                    <div class="shadow rounded" id="contact" data-aos="fade-up">
                         <h1 class="footerHeader">CONTACT ME</h1>
                         <br>
                         <p>PHONE: (704) 254-1583</p>
@@ -363,7 +363,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="shadow rounded" id="checkOut" data-aos="fade-up" data-aos-duration="4000" data-aos-anchor-placement="bottom-bottom">
+                    <div class="shadow rounded" id="checkOut" data-aos="fade-up">
                         <h1 class="footerHeader">CHECK ME OUT</h1>
                         <br>
                         <p><a href="assets/dev-photos/Collin Dean Wilson - Developer.pdf" target="#" id="resumeLink"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> CHECK OUT MY RESUME</a></p>
@@ -394,7 +394,10 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="text/javascript" src="assets/javascript/javascript.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        anchorPlacement: 'bottom-bottom',
+        duration: 1000
+      });
     </script>
 </body>
 </html>
