fixed the front end tiles on animating on hover

--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             <div class="row">
               <div class="col-lg-3"></div>
               <div class="col-lg-3 selectorRow">
-                <button class="btn frontSelector" id="projectSelector" data-aos="fade-up">FRONT-END</button>
+                <button class="btn frontSelector" id="projectSelector" data-aos="fade-right">FRONT-END</button>
               </div>
               <div class="col-lg-3 selectorRow">
-                <button class="btn backSelector" id="projectSelector" data-aos="fade-up">BACK-END</button>
+                <button class="btn backSelector" id="projectSelector" data-aos="fade-left">BACK-END</button>
               </div>
               <div class="col-lg-3"></div>
             </div>
@@ -134,7 +134,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12" id="projectContainer">
-                <div class="frontContainer" data-aos="fade-up">
+                <div class="frontContainer" >
                   <div class="projectImgContainer projectTile" id="frontProject1">
                     <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
@@ -172,13 +172,13 @@
                   </div>
                 </div>
                 <!-- ----------------------------------------------------------------------------------------- -->
-                <div class="backContainer" data-aos="fade-up">
+                <div class="backContainer" >
                   <div class="projectImgContainer projectTile backCont" id="backProject1">
                     <img src="./assets/dev-photos/website-pics/back/burger.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Eat-Da-Burger</h5>
+                      <a href="https://burger-express-collin.herokuapp.com/" class="btn portBtn shadow" target="#">Let's see it!</a>
                       <a href="https://github.com/wilsoncollin7/eat-da-burger" class="btn portGitBtn shadow" target="#">GitHub</a>
-
                     </div>
                   </div>
                   <div class="projectImgContainer projectTile backCont" id="backProject2">
@@ -186,7 +186,6 @@
                     <div class="projectImgOverlay">
                       <h5>Employee Management System</h5>
                       <a href="https://github.com/wilsoncollin7/employee-management-system" class="btn portGitBtn shadow" target="#">GitHub</a>
-
                     </div>
                   </div>
                   <div class="projectImgContainer projectTile backCont" id="backProject3">
@@ -195,7 +194,6 @@
                       <h5>Note Taking App</h5>
                       <a href="https://wilsoncollin7-note.herokuapp.com/" class="btn portBtn shadow" target="#">Let's see it!</a>
                       <a href="https://github.com/wilsoncollin7/note" class="btn portGitBtn shadow" target="#">GitHub</a>
-
                     </div>
                   </div>
                   <div class="projectImgContainer projectTile backCont" id="backProject4">
