added event safe to portfolio

--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
                       <a href="https://github.com/wilsoncollin7/README-Generator" class="btn portGitBtn shadow" target="#">GitHub</a>
                     </div>
                   </div>
+                  <div class="projectImgContainer projectTile backCont" id="backProject6">
+                    <img src="./assets/dev-photos/website-pics/back/eventsafe.png" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>EventSafe</h5>
+                      <a href="https://project-2-team-3.herokuapp.com/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                      <a href="https://github.com/wilsoncollin7/EventSafe" class="btn portGitBtn shadow" target="#">GitHub</a>
+                    </div>
+                  </div>
                 </div>
               </div>
           </div>
