updated resume and added to site

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="#mainSection4" >HOBBIES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="assets/dev-photos/Collin Dean Wilson - Developer.pdf" target="#" >RESUME</a>
+                            <a class="nav-link" href="assets/dev-photos/Collin Dean Wilson .pdf" target="#" >RESUME</a>
                         </li>
                     </ul>
                 </div>
@@ -372,7 +372,7 @@
                     <div class="shadow rounded" id="checkOut" data-aos="fade-up">
                         <h1 class="footerHeader">CHECK ME OUT</h1>
                         <br>
-                        <p><a href="assets/dev-photos/Collin Dean Wilson - Developer.pdf" target="#" id="resumeLink"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> CHECK OUT MY RESUME</a></p>
+                        <p><a href="assets/dev-photos/Collin Dean Wilson .pdf" target="#" id="resumeLink"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> CHECK OUT MY RESUME</a></p>
                         <p><a href="https://github.com/wilsoncollin7" target="_blank" id="gitLink"><span class="fa fa-github"></span> CHECK OUT MY GITHUB</a></p>
                     </div>
                 </div>
