changed portfolio tiles to polished mocks

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <div class="col-lg-12" id="projectContainer">
                 <div class="frontContainer" >
                   <div class="projectImgContainer projectTile" id="frontProject1">
-                    <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="prjectImg" alt="...">
+                    <img src="./assets/dev-photos/website-pics/front/earth.jpg" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Earthlight Weather App</h5>
                       <a href="https://wilsoncollin7.github.io/Earthlight/" class="btn portBtn shadow" target="#">Let's see it!</a>
@@ -144,7 +144,7 @@
                     </div>
                   </div>
                   <div class="projectImgContainer projectTile" id="frontProject2">
-                    <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="prjectImg" alt="...">
+                    <img src="./assets/dev-photos/website-pics/front/movie.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Movie Search</h5>
                       <a href="https://wilsoncollin7.github.io/project1/" class="btn portBtn shadow" target="#">Let's see it!</a>
@@ -153,7 +153,7 @@
                     </div>
                   </div>
                   <div class="projectImgContainer projectTile" id="frontProject3">
-                    <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="prjectImg" alt="...">
+                    <img src="./assets/dev-photos/website-pics/front/generator.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Password Generator</h5>
                       <a href="https://wilsoncollin7.github.io/Password-Generator/" class="btn portBtn shadow" target="#">Let's see it!</a>
@@ -162,7 +162,7 @@
                     </div>
                   </div>
                   <div class="projectImgContainer projectTile" id="frontProject4">
-                    <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="prjectImg" alt="...">
+                    <img src="./assets/dev-photos/website-pics/front/planner.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Daily Planner</h5>
                       <a href="https://wilsoncollin7.github.io/work-day-scheduler/" class="btn portBtn shadow" target="#">Let's see it!</a>
@@ -182,7 +182,7 @@
                     </div>
                   </div>
                   <div class="projectImgContainer projectTile backCont" id="backProject2">
-                    <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="prjectImg" alt="...">
+                    <img src="./assets/dev-photos/website-pics/back/employee.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Employee Management System</h5>
                       <a href="https://github.com/wilsoncollin7/employee-management-system" class="btn portGitBtn shadow" target="#">GitHub</a>
