updated projects with new apps

--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
 
                     </div>
                   </div>
+                  <div class="projectImgContainer projectTile" id="frontProject5">
+                    <img src="./assets/dev-photos/website-pics/front/directory.png" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Employee Directory</h5>
+                      <a href="https://directory-collin.herokuapp.com/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                      <a href="https://github.com/wilsoncollin7/employee-directory" class="btn portGitBtn shadow" target="#">GitHub</a>
+
+                    </div>
+                  </div>
                 </div>
                 <!-- ----------------------------------------------------------------------------------------- -->
                 <div class="backContainer" >
@@ -190,6 +199,14 @@
                     </div>
                   </div>
                   <div class="projectImgContainer projectTile backCont" id="backProject3">
+                    <img src="./assets/dev-photos/website-pics/back/offline.png" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Offline Budget App</h5>
+                      <a href="https://expenses-tracker-offline.herokuapp.com/" class="btn portBtn shadow" target="#">Let's see it!</a>
+                      <a href="https://github.com/wilsoncollin7/offline-budget-tracker" class="btn portGitBtn shadow" target="#">GitHub</a>
+                    </div>
+                  </div>
+                  <div class="projectImgContainer projectTile backCont" id="backProject4">
                     <img src="./assets/dev-photos/website-pics/back/note.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Note Taking App</h5>
@@ -197,25 +214,33 @@
                       <a href="https://github.com/wilsoncollin7/note" class="btn portGitBtn shadow" target="#">GitHub</a>
                     </div>
                   </div>
-                  <div class="projectImgContainer projectTile backCont" id="backProject4">
+                  <div class="projectImgContainer projectTile backCont" id="backProject5">
                     <img src="./assets/dev-photos/website-pics/back/team.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Team Builder</h5>
                       <a href="https://github.com/wilsoncollin7/team-builder" class="btn portGitBtn shadow" target="#">GitHub</a>
                     </div>
                   </div>
-                  <div class="projectImgContainer projectTile backCont" id="backProject5">
+                  <div class="projectImgContainer projectTile backCont" id="backProject6">
                     <img src="./assets/dev-photos/website-pics/back/readme.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>README.md Generator</h5>
                       <a href="https://github.com/wilsoncollin7/README-Generator" class="btn portGitBtn shadow" target="#">GitHub</a>
                     </div>
                   </div>
-                  <div class="projectImgContainer projectTile backCont" id="backProject6">
+                  <div class="projectImgContainer projectTile backCont" id="backProject7">
                     <img src="./assets/dev-photos/website-pics/back/employee.png" class="prjectImg" alt="...">
                     <div class="projectImgOverlay">
                       <h5>Employee Management System</h5>
                       <a href="https://github.com/wilsoncollin7/employee-management-system" class="btn portGitBtn shadow" target="#">GitHub</a>
+                    </div>
+                  </div>
+                  <div class="projectImgContainer projectTile backCont" id="backProject8">
+                    <img src="./assets/dev-photos/website-pics/back/fitness.png" class="prjectImg" alt="...">
+                    <div class="projectImgOverlay">
+                      <h5>Fitness tracker</h5>
+                      <a href="https://fitness-tracker-wilsoncollin7.herokuapp.com/?id=5f9074f7657ae30017bd0fa4" class="btn portBtn shadow" target="#">Let's see it!</a>
+                      <a href="https://github.com/wilsoncollin7/fitness-tracker" class="btn portGitBtn shadow" target="#">GitHub</a>
                     </div>
                   </div>
                 </div>
