changed the bio on the accordion to show I graduated

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </div>
                                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#aboutAccordion">
                                 <div class="card-body">
-                                    I am currently enrolled at UNC Chapel Hill with their Full Stack Web Development program. Here I am learning everything there is to know about Full Stack Development. I am set to graduate the program in December of 2020!                      </div>
+                                    I recently graduated from the UNC Chapel Hill Full Stack Web Development certificate program. There I learned everything there is to know about Full Stack Development. I am excited to start putting all of my new skills to the test!                      </div>
                                 </div>
                             </div>
                             <div class="aboutItemLast">
